# tender

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.agents/skills/using-tender/: SKILL.md
.claude/skills/using-tender/: SKILL.md  install.sh
.github/workflows/: ci.yml  docs-links.yml  release.yml
docs/: README.md  ROADMAP.md  analytics-recipes.md  design-principles.md  guide.md
docs/architecture/: 01-system-context.md  02-session-storage.md  03-run-lifecycle.md  04-pty-lane.md  05-key-flows.md  06-transport-boundaries.md  README.md
docs/plans/: 2026-03-16-phase1-implementation.md  2026-03-16-slice7-stdin-push.md  2026-03-16-tender-agent-process-sitter.md  2026-03-17-phase1.5-refactor.md  2026-03-17-phase1.6-polish.md  2026-03-17-phase2a-platform-trait.md  2026-03-17-slice8a-wait-reconcile-replace.md  2026-03-17-slice8b-hardening.md  2026-04-01-pty-session-mode-design.md  2026-04-01-pty-session-mode-impl.md  2026-04-03-portable-run-launcher.md  CONVENTIONS.md  README.md
docs/plans/active/: 00_exec-annotation-ergonomics.md  00_log-jsonl-output.md  00_remote-exec-host-parity.md  00_remote-frame-transport.md  00_windows-full-backend.md  01-after-composition.md  01-exec.md  01_boundary-metadata.md  01_dependency-first-scan-barrier.md  01_event-emit-primitive.md  01_event-exec-wrap-integration.md  01_event-follow-cursors.md  10_run-shebang.md  20_wrap-annotation-ingestion.md  pty-session-mode.md
docs/plans/backlog/: after-composition.md  agent-exec-spike.md  agent-hook-routing.md  boo-integration.md  boundary-metadata.md  content-addressable-storage.md  duckdb-exec.md  egui-block-terminal.md  event-log-analytics.md  exec.md  explicit-exec-targets.md  fleet-migration.md  gc-prune.md  hermes-block-runtime-integration.md  portable-run-launcher.md  powershell-exec-framing.md  powershell-exec-side-channel.md  provenance-on-lifecycle-transitions.md  pty-attach.md  pty-automation.md  pty-session-mode.md  python-repl-exec.md  remote-ssh-transport.md  skill-agent-block-runtime.md  skill-and-migration.md  skill-claude-code.md  tender-completer.md  wait-multiple.md  windows-full-backend.md  wrap-annotation-ingestion.md
docs/plans/completed/: 2026-03-16-phase1-implementation.md  2026-03-16-slice6-log-query.md  2026-03-17-phase1.5-refactor.md  2026-03-17-phase1.6-polish.md  2026-03-17-phase2a-platform-trait.md  2026-03-17-slice8a-wait-reconcile-replace.md  2026-03-17-slice8b-hardening.md  2026-03-28-phase2b-cmux-integration.md  2026-03-28-prune.md  2026-03-28-slice0-launch-fidelity.md  2026-03-28-slice1-namespace.md  2026-03-28-slice2-on-exit.md  2026-03-29-windows-child-lifecycle.md  2026-03-29-wrap-platform-refactor.md  2026-04-01-remote-ssh-transport.md  2026-04-01-run-shebang.md  2026-04-01-windows-full-backend.md  2026-04-01-wrap-annotation-ingestion.md  2026-04-02-exec-windows-shells.md  2026-04-03-agent-exec-spike.md  2026-04-03-duckdb-exec.md  2026-04-03-explicit-exec-targets.md  2026-04-03-portable-run-launcher.md  2026-04-03-pty-session-mode.md  2026-07-07-event-emit-primitive.md  2026-07-07-event-follow-cursors.md  2026-07-08-remote-exec-host-parity.md  2026-07-09-event-log-analytics-v1.md  2026-07-10-boundary-metadata.md  2026-07-13-dependency-first-scan-barrier.md  remote-ssh-transport.md
docs/plans/frontlog/: 2026-03-28-phase2b-cmux-integration.md  2026-03-28-wrap.md  2026-03-29-wrap-platform-refactor.md  2026-03-30-windows-full-backend.md  gc-prune.md  tender-run-shebang.md  wrap-annotation-ingestion.md
docs/plans/specs/: decision-process-sitter-not-framework.md  ecosystem-landscape.md  event-protocol.md  persistence-architecture.md  sidecar-control-protocol.md  tender-agent-process-sitter.md  tender-as-block-runtime.md  windows-parity.md
spike/agent-exec/: 01-basic-chain.sh  02-parallel-fan-out.sh  03-failure-propagation.sh  04-real-agent-chain.sh  README.md
src/: annotation.rs  attach_proto.rs  directive.rs  events.rs  exec_frame.rs  exec_request.rs  lib.rs  log.rs  main.rs  ready_file.rs  reconcile.rs  session.rs  sidecar.rs  ssh.rs
src/commands/: attach.rs  emit.rs  events.rs  exec.rs  guide.rs  kill.rs  list.rs  log.rs  mod.rs  prune.rs  push.rs  run.rs  sidecar.rs  skill.rs  start.rs  status.rs  wait.rs  watch.rs  wrap.rs
src/embedded/: SKILL.md
src/model/: dep_fail.rs  event.rs  ids.rs  meta.rs  mod.rs  provenance.rs  pty.rs  spec.rs  state.rs  transition.rs
src/platform/: mod.rs  unix.rs  windows.rs
tests/: acceptance_event_protocol.rs  cli_after.rs  cli_emit.rs  cli_events_follow.rs  cli_events_lifecycle.rs  cli_events_reconcile.rs  cli_events_replay.rs  cli_exec.rs  cli_guide.rs  cli_kill.rs  cli_kill_forced.rs  cli_log.rs  cli_namespace.rs  cli_on_exit.rs  cli_prune.rs  cli_pty.rs  cli_push.rs  cli_reconcile.rs  cli_remote.rs  cli_replace.rs  cli_run.rs  cli_skill.rs  cli_start_idempotent.rs  cli_timeout.rs  cli_wait.rs  cli_watch.rs  cli_watch_rebacked.rs  cli_wrap.rs  events_log.rs  events_read.rs  model_event.rs  model_ids.rs  model_spec.rs  model_transitions.rs  proptest_invariants.rs  session_fs.rs  sidecar_child.rs  sidecar_ready.rs  windows_breakaway.rs  windows_child.rs
tests/harness/: mod.rs
