[package]
name = "tender"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Agent process sitter — supervised runs, not processes"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
rustix = { version = "1.1.4", features = ["fs", "pipe", "process", "param"] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_IO"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
proptest = "1.10.0"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
