[package]
name = "agenttender"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Agent process sitter — supervised runs, not processes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grumpydevorg/agenttender"
readme = "README.md"
keywords = ["cli", "supervisor", "agent", "process", "session"]
categories = ["command-line-utilities", "development-tools"]
# Whitelist the crate package: public source, the embedded skill, the guide the
# binary include_str!s, README, and licenses. Keep src/bin test helpers out of
# the package so crates.io installs only `tender`, while local test builds can
# still auto-discover those helpers.
include = [
    "/src/*.rs",
    "/src/commands/**/*",
    "/src/embedded/**/*",
    "/src/model/**/*",
    "/src/platform/**/*",
    "/docs/guide.md",
    "/README.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
]

# The crate is `agenttender`; the library stays importable as `tender` and the
# binary keeps the short name `tender`.
[lib]
name = "tender"

[[bin]]
name = "tender"
path = "src/main.rs"

# `cargo binstall agenttender` fetches the prebuilt binary from GitHub releases.
# Asset naming here must match what release.yml uploads: agenttender-<target>.tar.gz
# containing the `tender` binary at the archive root.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
humantime = "2"
shell-words = "1"
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
rustix = { version = "1.1.4", features = ["fs", "pipe", "process", "param", "termios"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
] }
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
proptest = "1.10.0"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
